k8s/deployment/deploy-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-desafio-deployment
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      name: app-desafio-sre
      labels:
        app: app-desafio-sre
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: app-container
          image: lumr/desafio-sre:v16471055656
          ports:
            - containerPort: 5000
              name: http-web
            - containerPort: 8080
              name: http-metrics
  selector:
    matchLabels:
      app: app-desafio-sre
