k8s/deployment/deploy-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-desafio-deployment
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      name: postgres-desafio-sre
      labels:
        app: postgres-desafio-sre
    spec:
      containers:
        - name: postgres-container
          image: postgres:latest
          ports:
            - containerPort: 5432
              name: postgres-port
  selector:
    matchLabels:
      app: postgres-desafio-sre
