k8s/deployment/svc-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-postgres
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: postgres-port
      name: postgres
  selector:
    app: postgres-desafio-sre
