k8s/deployment/svc-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-redis
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: redis-port
      name: redis
  selector:
    app: redis-desafio-sre
