k8s/deployment/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: desafio.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-app
                port:
                  number: 80
          - path: /postgres
            pathType: Exact
            backend:
              service:
                name: svc-app
                port:
                  number: 80
          - path: /redis
            pathType: Exact
            backend:
              service:
                name: svc-app
                port:
                  number: 80
          - path: /error
            pathType: Exact
            backend:
              service:
                name: svc-app
                port:
                  number: 80
          - path: /metrics
            pathType: Exact
            backend:
              service:
                name: svc-app
                port:
                  number: 9999
